--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ whitenoise = "~=4.1"
 Django = "~=2.1"
 "django-registration" = "~=3.0"
 "django-sendgrid-v5" = "~=0.7"
+djangorestframework = "~=3.9"
 
 [requires]
 python_version = "3.7"
