Add 100% test coverage
The tests aren't always great, but it's easier to improve tests than to
break ground on them, I hope.

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,10 @@ isort = "*"
 black = "==18.9b0"
 flake8 = "*"
 ipython = "*"
+pytest = "*"
+pytest-django = "*"
+pytest-factoryboy = "*"
+pytest-cov = "*"
 
 [packages]
 "dj-database-url" = "~=0.5"
