--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            # Pipenv already present per CircleCI virtualenvs
+            pip install 'pipenv>=2018.11.26'
             pipenv install --dev
 
       - run:
