--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,9 @@ jobs:
     steps:
       - checkout
 
+      - run: sudo chown -R circleci:circleci /usr/local/bin
+      - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
+
       - restore_cache:
           keys:
           - v1-dependencies-py-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
