--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.2.1",
+    "bootstrap-sass": "^3.4.0",
+    "jquery": "^3.3.1",
+    "node-sass": "^4.11.0",
+    "popper.js": "^1.14.6",
+    "sass-loader": "^7.1.0",
     "vue": "^2.5.21",
     "vue-axios": "^2.1.4",
     "vue-cookie": "^1.1.4",
