--- a/Pipfile
+++ b/Pipfile
@@ -26,7 +26,7 @@ Django = "~=2.1"
 "django-registration" = "~=3.0"
 "django-sendgrid-v5" = "~=0.7"
 djangorestframework = "~=3.9"
-django-js-reverse = "*"
+django-js-reverse = "~=0.8"
 
 [requires]
 python_version = "3.7"
