--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "js:serve": "vue-cli-service serve",
     "js:test:unit": "vue-cli-service test:unit --coverage",
     "postinstall": "yarn build",
-    "py:serve": "pipenv run python manage.py runserver",
-    "py:migrate": "pipenv run python manage.py migrate",
-    "py:makemigrations": "pipenv run python manage.py makemigrations wheretofindme",
-    "py:test:unit": "pipenv run pytest",
+    "py:serve": "python manage.py runserver",
+    "py:migrate": "python manage.py migrate",
+    "py:makemigrations": "python manage.py makemigrations wheretofindme",
+    "py:test:unit": "pytest",
     "serve": "run-p js:serve py:serve",
     "test": "run-s js:test:unit py:test:unit"
   },
@@ -86,9 +86,9 @@
       "git add"
     ],
     "*.py": [
-      "pipenv run isort",
-      "pipenv run black",
-      "pipenv run flake8",
+      "isort",
+      "black",
+      "flake8",
       "git add"
     ]
   }
