--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
 
       - restore_cache:
           keys:
-          - v3-dependencies-py-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+          - v3-dependencies-py-{{ .Branch }}-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/dev.txt" }}
           - v3-dependencies-py-
 
       - restore_cache:
@@ -40,7 +40,7 @@ jobs:
       - save_cache:
           paths:
             - ".venv"
-          key: v3-dependencies-py-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+          key: v3-dependencies-py-{{ .Branch }}-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/dev.txt" }}
         
       - save_cache:
           paths:
@@ -69,7 +69,7 @@ jobs:
 
       - restore_cache:
           keys:
-          - v3-dependencies-py-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+          - v3-dependencies-py-{{ .Branch }}-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/dev.txt" }}
           - v3-dependencies-py-
 
       - run:
