--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,18 +18,19 @@ jobs:
 
       - restore_cache:
           keys:
-          - v3-dependencies-py-{{ .Branch }}-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/dev.txt" }}
-          - v3-dependencies-py-
+          - v4-dependencies-py-{{ .Branch }}-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/dev.txt" }}
+          - v4-dependencies-py-
 
       - restore_cache:
           keys:
-          - v3-dependencies-js-{{ .Branch }}-{{ checksum "yarn.lock" }}
-          - v3-dependencies-js-
+          - v4-dependencies-js-{{ .Branch }}-{{ checksum "yarn.lock" }}
+          - v4-dependencies-js-
 
       - run:
           name: Install Python dependencies
           command: |
-            sudo pip install pip-tools
+            source .venv/bin/activate
+            pip install pip-tools
             pip-sync requirements/dev.txt requirements/base.txt
 
       - run:
@@ -40,13 +41,13 @@ jobs:
       - save_cache:
           paths:
             - ".venv"
-          key: v3-dependencies-py-{{ .Branch }}-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/dev.txt" }}
+          key: v4-dependencies-py-{{ .Branch }}-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/dev.txt" }}
         
       - save_cache:
           paths:
             - "~/.cache/yarn"
             - "./node_modules/"
-          key: v3-dependencies-js-{{ .Branch }}-{{ checksum "yarn.lock" }}
+          key: v4-dependencies-js-{{ .Branch }}-{{ checksum "yarn.lock" }}
         
   test-server:
     docker:
@@ -69,12 +70,13 @@ jobs:
 
       - restore_cache:
           keys:
-          - v3-dependencies-py-{{ .Branch }}-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/dev.txt" }}
-          - v3-dependencies-py-
+          - v4-dependencies-py-{{ .Branch }}-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/dev.txt" }}
+          - v4-dependencies-py-
 
       - run:
           name: run python tests
           command: |
+            source .venv/bin/activate
             pytest
 
   test-client:
@@ -88,8 +90,8 @@ jobs:
 
       - restore_cache:
           keys:
-          - v3-dependencies-js-{{ .Branch }}-{{ checksum "yarn.lock" }}
-          - v3-dependencies-js-
+          - v4-dependencies-js-{{ .Branch }}-{{ checksum "yarn.lock" }}
+          - v4-dependencies-js-
 
       - run:
           name: run javascript tests
