--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,8 @@ jobs:
       - run:
           name: Install Python dependencies
           command: |
+            sudo pip install virtualenv
+            virtualenv .venv
             source .venv/bin/activate
             pip install pip-tools
             pip-sync requirements/dev.txt requirements/base.txt
