Handle more unicode in names better
The nice display font for main names lacked a lot of the more
interesting characters, outside western Europe. Let's fix that, by
falling back to a more boring sans serif.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-sass": "^3.4.0",
     "jquery": "^3.5.0",
-    "node-sass": "^4.11.0",
+    "sass": "^1.49.7",
     "popper.js": "^1.14.6",
     "sass-loader": "^8.0.0",
     "vue": "^2.6.11",
