--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,8 @@ jobs:
             sudo pip install virtualenv
             virtualenv .venv
             source .venv/bin/activate
-            pip install -U pip pip-tools
+            pip install -U pip
+            pip install pip-tools
             pip-sync requirements/dev.txt requirements/base.txt
 
       - run:
