--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
             virtualenv .venv
             source .venv/bin/activate
             pip install -U pip
-            pip install pip-tools
+            pip install pip-tools==6.5.0
             pip-sync requirements/dev.txt requirements/base.txt
 
       - run:
