--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,8 +30,7 @@ jobs:
           name: Install Python dependencies
           command: |
             pip install -U pip
-            pip install pip-tools==6.4.0
-            pip-sync requirements/dev.txt requirements/base.txt
+            pip install -r requirements/dev.txt requirements/base.txt
 
       - run:
           name: Install Javascript dependencies
