Add verified_at logic and database field

--- a/requirements/dev.in
+++ b/requirements/dev.in
@@ -1,10 +1,11 @@
 isort
-black==20.8b1
+black
 flake8
 ipython
 pytest
 pytest-django
 pytest-factoryboy
 pytest-cov
+requests-mock
 sphinx
 beautifulsoup4
