--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "vue-cli-service build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider vue-cli-service build",
     "inspect": "vue-cli-service inspect",
     "js:lint": "vue-cli-service lint",
     "js:serve": "vue-cli-service serve",
@@ -21,8 +21,8 @@
     "bootstrap": "^4.4.1",
     "bootstrap-sass": "^3.4.0",
     "jquery": "^3.5.0",
-    "sass": "^1.49.7",
     "popper.js": "^1.14.6",
+    "sass": "^1.49.7",
     "sass-loader": "^8.0.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.4",
@@ -44,7 +44,7 @@
     "eslint-plugin-vue": "^6.1.2",
     "lint-staged": "^9.5.0",
     "npm-run-all": "^4.1.5",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
