Tweak CircleCI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,11 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/python:3.8.2-node
+      - image: cimg/python:3.8.15-node
         environment:
           PIPENV_VENV_IN_PROJECT: true
           DATABASE_URL: postgresql://wheretofindme@localhost/wheretofindme
-      - image: circleci/postgres:11.1
+      - image: cimg/postgres:14.5
         environment:
           POSTGRES_USER: wheretofindme
           POSTGRES_DB: wheretofindme
@@ -18,13 +18,13 @@ jobs:
 
       - restore_cache:
           keys:
-          - v6-dependencies-py-{{ .Branch }}-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/dev.txt" }}
-          - v6-dependencies-py-
+          - v7-dependencies-py-{{ .Branch }}-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/dev.txt" }}
+          - v7-dependencies-py-
 
       - restore_cache:
           keys:
-          - v6-dependencies-js-{{ .Branch }}-{{ checksum "yarn.lock" }}
-          - v6-dependencies-js-
+          - v7-dependencies-js-{{ .Branch }}-{{ checksum "yarn.lock" }}
+          - v7-dependencies-js-
 
       - run:
           name: Install Python dependencies
@@ -41,24 +41,24 @@ jobs:
       - save_cache:
           paths:
             - "/home/circleci/.local"
-          key: v6-dependencies-py-{{ .Branch }}-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/dev.txt" }}
+          key: v7-dependencies-py-{{ .Branch }}-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/dev.txt" }}
         
       - save_cache:
           paths:
             - "~/.cache/yarn"
             - "./node_modules/"
-          key: v6-dependencies-js-{{ .Branch }}-{{ checksum "yarn.lock" }}
+          key: v7-dependencies-js-{{ .Branch }}-{{ checksum "yarn.lock" }}
         
   test-server:
     docker:
-      - image: circleci/python:3.8.2
+      - image: cimg/python:3.8.15
         environment:
           PIPENV_VENV_IN_PROJECT: true
           DATABASE_URL: postgresql://wheretofindme@localhost/wheretofindme
           DJANGO_SECRET_KEY: "some secret this is"
           DJANGO_DEBUG: True
           SECURE_SSL_REDIRECT: false
-      - image: circleci/postgres:11.1
+      - image: cimg/postgres:14.5
         environment:
           POSTGRES_USER: wheretofindme
           POSTGRES_DB: wheretofindme
@@ -70,8 +70,8 @@ jobs:
 
       - restore_cache:
           keys:
-          - v6-dependencies-py-{{ .Branch }}-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/dev.txt" }}
-          - v6-dependencies-py-
+          - v7-dependencies-py-{{ .Branch }}-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/dev.txt" }}
+          - v7-dependencies-py-
 
       - run:
           name: run python tests
@@ -80,7 +80,7 @@ jobs:
 
   test-client:
     docker:
-      - image: circleci/python:3.8.2-node
+      - image: cimg/python:3.8.15-node
 
     working_directory: ~/repo
 
@@ -89,8 +89,8 @@ jobs:
 
       - restore_cache:
           keys:
-          - v6-dependencies-js-{{ .Branch }}-{{ checksum "yarn.lock" }}
-          - v6-dependencies-js-
+          - v7-dependencies-js-{{ .Branch }}-{{ checksum "yarn.lock" }}
+          - v7-dependencies-js-
 
       - run:
           name: run javascript tests
