--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,8 @@ jobs:
       - run:
           name: Install Python dependencies
           command: |
+            python3 -m venv .venv
+            . .venv/bin/activate
             pip install -U pip
             pip install -r requirements/base.txt
             pip install -r requirements/dev.txt
@@ -41,6 +43,7 @@ jobs:
       - save_cache:
           paths:
             - "/home/circleci/.local"
+            - "~/repo/.venv"
           key: v7-dependencies-py-{{ .Branch }}-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/dev.txt" }}
         
       - save_cache:
@@ -76,6 +79,7 @@ jobs:
       - run:
           name: run python tests
           command: |
+            . .venv/bin/activate
             pytest
 
   test-client:
