--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run:
           name: Install Python dependencies
           command: |
-            python3 -m venv .venv
+            python -m venv .venv
             . .venv/bin/activate
             pip install -U pip
             pip install -r requirements/base.txt
