Fix up node versions
And CircleCI Python versions.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "vue-cli-service build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider vue-cli-service build",
     "inspect": "vue-cli-service inspect",
     "js:lint": "vue-cli-service lint",
     "js:serve": "vue-cli-service serve",
@@ -71,7 +71,8 @@
     "not ie <= 8"
   ],
   "engines": {
-    "yarn": "1.x"
+    "yarn": "1.x",
+    "node": "^18.17"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
